# stm32l4r5-async-playground

./: Cargo.toml  Embed.toml  memory.x
src/: hardware.rs  main.rs  rtt_logger.rs
src/hardware/: gpio.rs  mono.rs  rcc.rs  timer.rs  uart.rs  uartasync.rs
