[package]
name = "stm32l4r5-playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal-nb = "1.0.0-alpha.2"
embedded-hal-async = "0.2.0-alpha.1"
nb = "1"
cortex-m = { version="0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
stm32ral = { version = "0.8.0", features = ["stm32l4r5", "rtic", "rt"] }
log = "0.4.18"
fugit = "0.3"
heapless = "0.7"
paste = "1"
fugit-timer = "0.1.3"
rtic-time = "1.0.0"
rtic = { version="2.0.0", features=["thumbv7-backend"]}
panic-rtt-target = { version = "0.1.2", features = ["cortex-m"] }
rtt-target = {version = "0.3.1", features=["cortex-m"]}
embassy-sync = "0.2.0"